[package]
name = "wii-presenter"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "0.6.1"
gilrs = "0.11.2"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = "0.17" 

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Devices_Bluetooth",
    "Win32_Foundation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Storage_FileSystem",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Security"
] }