[package]
name = "wii-presenter"
version = "0.1.1"
edition = "2024"

[dependencies]
enigo = "0.6.1"
rs-wiiuse = { git = "https://github.com/SilverfangONE/rs-wiiuse.git", tag = "v0.1.3" }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[target.'cfg(target_os = "linux")'.dependencies]
enigo = { version = "0.6.1", features = ["wayland"] }
